--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   top: 0%;
   width: 100%;
 }
+
 #title{
   font-family: 'Nunito', sans-serif;
   font-size: 2rem;
@@ -10,4 +11,27 @@
   text-align: center;
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.main-carousel {
+  background: #EEE;
+}
+
+.carousel-cell {
+  width: 66%;
+  height: 200px;
+  margin-right: 10px;
+  background: #8C8;
+  border-radius: 5px;
+  counter-increment: carousel-cell;
+}
+
+/* cell number */
+.carousel-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(carousel-cell);
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
 }
