--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+#background{
+    background-color: red;
+    top: 0%;
+    width: 100%;
+}
+#title{
+  font-family: 'Nunito', sans-serif;
+  font-size: 2rem;
+  color: white;
+  text-align: center;
+  padding-top:100px;
+  padding-bottom: 100px;
+}
 .main-carousel {
 }
 
