--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+body {
+  width: 100%;
+  height: 100%;
+}
+
+#background {
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  margin: 0;
+  top: 0;
+  left: 0;
+}
 .main-carousel {
 }
 
