--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  width: 100%;
+  height: 100%;
+}
 
 body {
   width: 100%;
@@ -6,15 +10,18 @@ body {
 
 #background{
     background-color: red;
-    top: 0%;
+    top: 0px;
+    left: 0px;
     width: 100%;
+    height: 100%;
 }
+
 #title{
   font-family: 'Nunito', sans-serif;
   font-size: 2rem;
   color: white;
   text-align: center;
-  padding-top:100px;
+  padding-top: 100px;
   padding-bottom: 100px;
 }
 
