--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,7 @@
   width: 70%;
   height: 400px;
   margin-right: 10px;
-  background: deepskyblue;
-  border-radius: 5px;
-  counter-increment: carousel-cell;
+  background: transparent;
 }
 
 /* cell number */
@@ -17,21 +15,6 @@
 }
 
 .carousel-content {
-  font-family: 'Nunito', sans-serif;
-  font-size: 1rem;
-  color: white;
-  text-align: center;
-}
-
-.title {
-  font-family: 'Nunito', sans-serif;
-  font-size: 2rem;
-  color: white;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center;
-}
-
-.embed {
+  padding-top: 50px;
   text-align: center;
 }
