--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,20 @@ body {
   margin:auto;
   display:block;
 }
+
+#footer{
+  font-family: 'Nunito', sans-serif;
+  font-size: 2rem;
+  color: white;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+#footerbackground{
+  background-color: red;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 40%;
+}
