--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
 }
 
+/*
 #background{
     background-color: red;
     top: 0px;
@@ -17,14 +18,19 @@ body {
     width: 100%;
     height: 100%;
 }
+*/
 
 #title{
   font-family: 'Nunito', sans-serif;
   font-size: 2rem;
-  color: white;
+  color: black;
   text-align: center;
   padding-top: 100px;
   padding-bottom: 100px;
+  position: fixed;
+  z-index: 2;
+  left: 50%;
+transform: translateX(-50%);
 }
 
 .main-carousel {
