--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,6 @@
 html, body {
-  width: 100%
+  width: 100%;
   height: 100%;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 /*
@@ -23,15 +16,21 @@ body {
 #title{
   font-family: 'Nunito', sans-serif;
   font-size: 2rem;
-  color: black;
-  text-align: center;
+  color: white;
+  position: absolute;
+  margin-top: 5%;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 1;
 }
 
 .main-carousel {
+  width: 300px;
+  height: 400px;
 }
 
 .carousel-cell {
-  width: 70%;
+  width: 300px;
   height: 400px;
   margin-right: 10px;
   background: transparent;
@@ -48,9 +47,12 @@ body {
   text-align: center;
 }
 
-.slide-arrow{
-  margin:auto;
-  display:block;
+.slide-arrow {
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 1;
 }
 
 #footer{
