--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,6 @@
 html, body {
-  width: 100%;
   height: 100%;
 }
-
-/*
-#background{
-    background-color: red;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-}
-*/
 
 #title{
   font-family: 'Nunito', sans-serif;
@@ -30,7 +19,7 @@ html, body {
 }
 
 .carousel-cell {
-  width: 300px;
+  width: 90%;
   height: 400px;
   margin-right: 10px;
   background: transparent;
@@ -55,19 +44,8 @@ html, body {
   z-index: 1;
 }
 
-#footer{
+footer {
   font-family: 'Nunito', sans-serif;
-  font-size: 2rem;
-  color: white;
+  font-size: 10px;
   text-align: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-#footerbackground{
-  background-color: red;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 40%;
 }
