--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 #title{
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Avenir', sans-serif;
   font-size: 2rem;
   color: white;
   position: absolute;
@@ -11,6 +11,9 @@ html, body {
   left: 50%;
   transform: translate(-50%);
   z-index: 1;
+  text-align: center;
+  letter-spacing:6px;
+  padding-top: 15%;
 }
 
 .main-carousel {
