--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ a {
   color: white;
 }
 
+
 #title{
   font-family: 'Avenir', sans-serif;
   font-size: 3rem;
@@ -24,11 +25,14 @@ a {
 
 
 
-
-#navbar{
-	margin-top: 4%;
-	margin-right: 5%;
+.navbar-ul {
+	display: block;
+	position: relative;
+	margin-top:4%;
+	z-index: 1;
+	float: left;
 }
+
 li {
     display: inline;
     float: right;
@@ -43,12 +47,13 @@ ul {
 	list-style-type: none;
 	background-color: F46C42;
 }
+
 a {
-	padding:30px;
 	font-family: 'Avenir', sans-serif;
 	font-weight: bold;
 	letter-spacing:2px;
 	font-size: 1rem;
+	padding-top:30px;
 	
 }
 
