--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  width: 100%;
   background-color: #F5D6BA;
 }
 
@@ -7,60 +8,26 @@ a {
   color: white;
 }
 
-
-#title{
-  font-family: 'Avenir', sans-serif;
-  font-size: 3rem;
-  font-weight: bold;
-  color: white;
-  position: absolute;
-  margin-top: 5%;
-  left: 50%;
-  transform: translate(-50%);
-  z-index: 1;
-  text-align: center;
-  letter-spacing:6px;
-  padding-top: 5%;
+a:hover {
+  color: gray;
 }
-
-
 
 .navbar-ul {
-	display: block;
-	position: relative;
-	margin-top:4%;
-	z-index: 1;
-	float: left;
+  list-style: none;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
 }
 
-li {
-    display: inline;
-    float: right;
+.navbar-ul li {
+  display: inline;
+  float: left;
+  padding: 10px;
 }
 
-li a:hover {
-	color: grey;
-	text-decoration: none;
-}
-
-ul {
-	list-style-type: none;
-	background-color: F46C42;
-}
-
-a {
-	font-family: 'Avenir', sans-serif;
-	font-weight: bold;
-	letter-spacing:2px;
-	font-size: 1rem;
-	padding-top:30px;
-	
-}
-
-#navtitle{
-	font-size: 1.3em;
-	letter-spacing: 3px;
-	padding-left:90px;
+.navbar-ul a {
+  font-family: 'Nunito', sans-serif;
+  text-decoration: none;
 }
 
 #main-carousel {
@@ -105,7 +72,6 @@ a {
   left: 15%;
 }
 
-
 .footer {
   font-family: 'Nunito', sans-serif;
   font-size: 10px;
@@ -115,5 +81,5 @@ a {
   height: 20px;
   width: 100%;
   bottom: 0;
-  background-color: red;
+  background-color: ;
 }
